created the My classes session for the user upto the swagger.json file
