# backend/app.js
@@ -14,11 +14,11 @@ const collegesRouter = require("./routes/college.routes");
 const departmentsRouter = require("./routes/department.routes");
 const userBasicInfoRouter = require("./routes/user.basicinfo.routes");
 const userContactDetailsRouter = require("./routes/user.contactdetails.routes");
-const userOfficialIdsRouter = require("./routes/user.officialids.routes");
+const userOfficialIdsRouter = require("./routes/user.OfficialIds.routes");
 const userFamilyRouter = require("./routes/user.family.routes");
 const userPhotoRouter = require("./routes/user.profilephoto.routes");
 const userResponsibilityRouter = require("./routes/user.responsibility.routes");
-const userClassesRouter = require("./routes/user.classes.routes");
+const userMyClassesRouter = require("./routes/user.myclasses.routes");
 
 // Load database and cached data
 const db = require("./db/db");
@@ -123,7 +123,7 @@ app.use("/api/userofficialids", userOfficialIdsRouter);
 app.use("/api/userfamily", userFamilyRouter);
 app.use("/api/userprofilephoto", userPhotoRouter);
 app.use("/api/userresponsibility", userResponsibilityRouter);
-app.use("/api/userclasses", userClassesRouter);
+app.use("/api/usermyclasses", userMyClassesRouter);
 
 // Serve Swagger UI
 if (process.env.NODE_ENV === "development") {
